@@ -1,0 +1,9 @@
+Title: Added a painter for the service check period
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i3
+Date: 1479990534
+Class: feature
+
+
