@@ -25,6 +25,7 @@
     * 4092 FIX: if.include: fixed wrong calculated number of interfaces which are up
 
     Multisite:
+    * 4070 Added a painter for the service check period
     * 3974 FIX: Sorting comments in hover menu of comments icon by time now
     * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
     * 4046 FIX: Repaired html rendering....
